# suvadu

./: CHANGELOG.md  Cargo.toml  README.md
src/: agent.rs  cli.rs  config.rs  db.rs  hooks.rs  integrations.rs  main.rs  redact.rs  settings_ui.rs  stats_ui.rs  suggest_ui.rs  update.rs
src/agent_ui/: dashboard.rs  mod.rs  prompts.rs  stats.rs
src/commands/: doctor.rs  entry.rs  history.rs  mod.rs  settings.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
src/repository/: entries.rs  mod.rs
src/search/: data.rs  format.rs  input.rs  mod.rs  render.rs  tests.rs
src/session_ui/: picker.rs  timeline.rs
src/util/: terminal.rs  timestamp.rs
